# echelon

./: .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .dockerignore  .env  .env.example  Cargo.toml  Dockerfile
backend/.sqlx/: query-075e169be624d89d92aa4dcb8e79e2c435f4ed60a812c3adcfa84b6666e682e5.json  query-09a989f73119b5f0d15a744b24a2b4d4f70b11bf7c409b5d8320337f5b78ac23.json  query-1a89f8d5aa396f7b60406d63980534013c488b74f04ce945735332d5d8759ded.json  query-1ba1b345606045a3a1de76a20f144285e9432069292f6da02d1ab1ab7f8e565b.json  query-21dc934cf58c03de5975541b5508777c288b90c69b11047d826c9448425d64a2.json  query-4ffe225714ed1dacda2034709682930d993291d0b8e75649cb3ef06fc22f5d14.json  query-50725eabc871215adfe98a8a02b614598dd8dae101b867be9f299393bbd02921.json  query-566638840ca76b6655862c90182cd9bb8d478d6ff50b613f1f4e3553005a418a.json  query-5e4325b5b5ab76cc33f015db3ab640b13a06e376403359faa3e09320749110b8.json  query-692e81d60c8bee31411e8cd27c8ae871cdf87949c80703a6f0c1b344b4b3c1e3.json  query-9536ea85c24d9cde351416d3ed3b32866c0e8664c6136fd183d4a881791dd492.json  query-9759c8523197f462d0655d5f23f3cefef006e3c973c9ce7314b4c193b1a55bf0.json  query-9c9ae86e05681b67f0b10b1d001fb6d170c5eb75770de6a129016cb4567c1a3c.json  query-c5865216feb7fc75937b3703a0db63e7777de9c08c341193c5357e911bcdcd78.json  query-ccb03bc2ea3890ec0880b92896d1cd695e80a533e0e0c0aa86c32d83fdd5747e.json  query-cf3ea4523803263d9607d2ee9b74677b2a2d4dcc7c9fc18afd8ced02b8e28421.json  query-f637f0a0039150fb84df50cd869d1c1a447d27891e133d70b6882edfd23cc4e5.json
backend/examples/: basic_rag.rs  terminal_chat.rs  terminal_chat_with_sql.rs  upload_points_to_vectordb.rs
backend/sql/: creation_script.sql
backend/src/: api.rs  app_state.rs  config.rs  error.rs  lib.rs  llm.rs  main.rs  processing.rs  storage.rs  vectorization.rs
backend/src/api/: auth.rs  completions.rs  conversations.rs  health.rs  jwt.rs  router.rs  users.rs
backend/src/embeddings/: mod.rs  process.rs  tests.rs  text_chunk.rs
backend/src/llm/: inference.rs  mod.rs  model.rs  ollama.rs  ollama_adapter.rs  ollama_wrapper.rs  prompt.rs
backend/src/processing/: chunk.rs  document.rs  embedding.rs  utils.rs
backend/src/prompt/: mod.rs  tests.rs
backend/src/storage/: backends.rs  model.rs  postgres.rs  qdrant.rs  relational.rs  vector.rs
backend/src/vectordb/: mod.rs  qdrant.rs  qdrant_adapter.rs  vector_store.rs
backend/src/vectorization/: chunk.rs  utils.rs
docs/: example.md  introduction.md  openapi.yaml  scalar.config.json
docs/Architecture/: Echelon System Architecture Diagram.excalidraw
docs/architecture/: echelon c4 diagram.excalidraw
frontend/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: app.css  app.d.ts  hooks.server.ts
frontend/src/lib/api/: auth.ts  client.ts  config.ts  conversations.ts  messages.ts
frontend/src/lib/auth/: auth.ts  token.ts
frontend/src/lib/components/: app-header.svelte  app-sidebar.svelte  dark-mode-switch.svelte  textarea-no-focus.svelte
frontend/src/lib/model/: conversations.svelte.ts  messages.svelte.ts  user.ts
frontend/src/lib/state/: conversations.svelte.ts  new-chat.svelte.ts  new-user.svelte.ts  user.svelte.ts
frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte  hooks.server.ts
frontend/src/routes/chat/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
frontend/src/routes/login/: +page.server.ts  +page.svelte  login_schema.ts
frontend/src/routes/maintenance/: +page.svelte
frontend/src/routes/onboarding/: +page.svelte  (+2 more)
(+16 files in other folders)
