[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.85"
fastembed = "4.3.0"
ollama-rs = { version = "0.2.2", features = ["stream"] }
qdrant-client = "1.12.1"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["full", "rt-multi-thread"] }
uuid = { version = "1.11.0", features = ["fast-rng", "macro-diagnostics", "serde", "v4", "v5"] }
strum = "0.27.1"
strum_macros = "0.27.1"
fancy-regex = "0.14.0"
once_cell = "1.18"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "json", "chrono", "runtime-async-std-native-tls"] }
dotenv = "0.15.0"
axum = { version = "0.7.9", features = ["macros"] }
serde = { version = "1.0.217", features = ["derive"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
serde_json = "1.0.138"
chrono = { version = "0.4.39", features = ["serde"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
argon2 = "0.5.3"
axum-extra = { version = "0.10.0", features = ["cookie"] }
time = "0.3.37"
jsonwebtoken = "9.3.1"
rand_core = { version = "0.9.2", features = ["std"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
